<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSetting.UserSettingActivity"
    android:background="#E7717D"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/imageViewSetting"
        android:layout_marginBottom="70dp"
        />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewSetting"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/default_user_pic"
        app:civ_border_color="#3f51b5"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#3f51b5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="onChangeAvatar"
        />


    <EditText
        android:id="@+id/old_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/old_password"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:password="true"
        />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/old_password"
        android:layout_marginTop="40dp"
        android:hint="@string/new_password"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:password="true"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_password"
        android:layout_marginTop="40dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:password="true"
        />

    <Button
        android:id="@+id/user_setting_submit"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onSubmitClick"
        />

    <ImageView
        android:id="@+id/edit_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_create_black_24dp"
        android:background="@android:color/transparent"
        android:layout_alignEnd="@id/imageViewSetting"
        android:layout_alignBottom="@id/imageViewSetting"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="15dp"
        android:onClick="onChangeAvatar"
        />

</RelativeLayout>